<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kwanat.mma_mobilemanagementassistant.LoginActivity">

    <EditText
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:hint="@string/loginHint"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="248dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_submit"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="325dp" />

    <Button
        android:id="@+id/login_submit"
        android:layout_width="174dp"
        android:layout_height="60dp"
        android:text="@string/submitButton"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="427dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="37dp" />
</RelativeLayout>
