<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:background="@drawable/light_blue"
    android:layout_height="match_parent">
    <!-- The main content view -->

    <RelativeLayout
        android:id="@+id/content_frame"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.kwanat.mma_mobilemanagementassistant.ChangePasswordActivity">

        <EditText
            android:id="@+id/oldPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/repeatOldPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:hint="@string/passwordHint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/repeatOldPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/newPassword"
            android:layout_alignStart="@+id/oldPassword"
            android:layout_marginBottom="22dp"
            android:ems="10"
            android:hint="@string/repeatPasswordHint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/changePasswordSubmit"
            android:layout_alignStart="@+id/repeatOldPassword"
            android:layout_marginBottom="57dp"
            android:ems="10"
            android:hint="@string/newPasswordHint"
            android:inputType="textPassword" />


        <Button
            android:id="@+id/changePasswordSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="64dp"
            android:text="@string/submitButton" />


        <!-- Put what you want as your normal screen in here, you can also choose for a linear layout or any other layout, whatever you prefer -->
    </RelativeLayout>
    <!-- The navigation drawer -->
    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        android:choiceMode="singleChoice"
        android:divider="@android:color/black"
        android:dividerHeight="1dp"
        android:headerDividersEnabled="false" />
</android.support.v4.widget.DrawerLayout>

