<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- The main content view -->

    <RelativeLayout
        android:id="@+id/content_frame"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.kwanat.mma_mobilemanagementassistant.UserScheduleActivity">


        <!-- Put what you want as your normal screen in here, you can also choose for a linear layout or any other layout, whatever you prefer -->

        <EditText
            android:id="@+id/scheduleStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="199dp"
            android:hint="@string/startTimeHint"
            android:ems="10"
            android:inputType="time" />

        <EditText
            android:id="@+id/scheduleEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/scheduleStartTime"
            android:layout_alignTop="@+id/scheduleStartTime"
            android:layout_marginTop="52dp"
            android:hint="@string/endTimeHint"
            android:ems="10"
            android:inputType="time" />

        <Button
            android:id="@+id/addScheduleSubmitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/scheduleEndTime"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="39dp"
            android:text="@string/submitButton" />

        <TextView
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_above="@+id/scheduleStartTime"
            android:layout_alignEnd="@+id/scheduleStartTime"
            android:layout_alignStart="@+id/scheduleStartTime"
            android:layout_marginBottom="25dp"
            android:text="TextView" />
    </RelativeLayout>
    <!-- The navigation drawer -->
    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:headerDividersEnabled="false" />
</android.support.v4.widget.DrawerLayout>

